# Agentpay

./: .dippy  .env.example  .env.production.example  .env.test  .gitignore  .mcp.json  .npmrc  0001-chore-worker-upgrade-wrangler-and-patch-undici-via-o.patch  7_DAY_SPRINT_TO_DEMO.md  AGENTPAY_WHITEPAPER--.md  AGENTPAY_WHITEPAPER.md  AGENTPAY_WHITEPAPER_.md  AGENTPAY_WHITEPAPER_V3_FINAL (1).md  AGENTS.md  AUTOMATED_SETUP_GUIDE.txt  BUILD_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPLETE_FILE_LIST.txt  CONTRIBUTING.md  DAY1_COMPLETION.md  DEPLOYMENT.md  DOWNLOAD_INSTRUCTIONS.txt  FILES_DELIVERED.md  FIX_TESTS.md  FOUNDATION_AGENTS_DEPLOYMENT.md  IdentityVerifierAgent.ts  LICENSE  MISSION_ACCOMPLISHED.md  ONE_PAGER.md  PHASE6_BRANCH_SPLIT_EXECUTION_PLAN.md  PR6_PR_BODY.txt  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SETUP.md  PR_VERIFICATION_REPORT.md  QUICKSTART.md  README.md  REMEDIATION_STATUS.md  REPO_AUDIT_PHASE1.md  (+48 more)
.claude/: settings.json  settings.local.json
.tmp/: build_ace_aux_passes.py  grade_ace_frames.py  render_ace_pack.py
audit/: weekly-report.md
core-private/: TO_MOVE.md
coverage/: clover.xml  coverage-final.json  lcov.info
dashboard/: .env.example  .vade-report  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  proxy.ts  tsconfig.json  vercel.json
docs/: ACE_API_PARTNERSHIP_TARGETS.md  ACE_BETA_CHECKLIST.md  (+90 more)
sdk/python/: README.md  agentpay_client.py  demo_agent.py  pyproject.toml
sdk/python/agentpay/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
(+1223 files in other folders)
