[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpay"
version = "0.1.0"
description = "Python SDK for AgentPay - Universal payment gateway for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentPay" }]
keywords = ["agentpay", "payments", "ai-agents", "sdk", "x402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentpay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
